<resources>
    <string name="app_name">Home Sport</string>
    <string name="mulai">Mulai</string>
    <string name="layanan_pengguna">Layanan Pengguna</string>
    <string name="olahraga_rumah">Olahraga Rumah</string>
    <string name="pemanasan_10_menit">Pemanasan 10 menit</string>
    <string name="skiping_10_menit">Skiping 10 menit</string>
    <string name="push_up_20_kali">Push up 20 kali</string>
    <string name="sit_up_20_kali">Sit up 20 kali</string>
    <string name="pull_up_semaksimalnya">Pull up semaksimalnya</string>
    <string name="lakukan_pernafasan_10_menit">Lakukan pernafasan 10 menit</string>
</resources>
