<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relatif1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:background="#333">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/olahraga_rumah"
                android:textSize="30dp"
                android:textColor="#fff"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/relatif1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pemanasan_10_menit"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="490dp"
                android:src="@drawable/bc" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/skiping_10_menit"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="490dp"
                android:src="@drawable/skiping" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/push_up_20_kali"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="490dp"
                android:src="@drawable/push" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sit_up_20_kali"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="490dp"
                android:src="@drawable/situp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pull_up_semaksimalnya"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="490dp"
                android:src="@drawable/pull" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lakukan_pernafasan_10_menit"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="490dp"
                android:src="@drawable/breath" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
